Made class fields protected in MtxStopwatch
- For use in testing
- Also allows possible inheriting in the future